<resources>
    <string name="app_name">Road-Sign Spotter</string>
    <string name="image_not_found">Gambar tidak ditemukan di dataset</string>
    <string name="terjadi_kesalahan">Service Sedang Dinyalakan, Silahkan Coba Lagi!</string>
    <string name="iv_empty">Gambar tidak ada! gunakan kamera / ambil dari gallery</string>
    <string name="lihat_penjelasan">Lihat Penjelasan Selengkapnya</string>
    <string name="gambar">Gambar yang di scan</string>
    <string name="hello">Hello!</string>
    <string name="logo">Logo</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="click_register">Register Here</string>
    <string name="show_name"><u>Name</u></string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="password_error">"Password harus memiliki minimal 8 karakter."</string>
    <string name="password_not_match">"Password tidak sama."</string>
    <string name="name_empty">Nama tidak boleh kosong</string>
    <string name="username_empty">Username tidak boleh kosong</string>
    <string name="email_empty">Email tidak boleh kosong</string>
    <string name="password_empty">Password tidak boleh kosong</string>
    <string name="email_error">Email tidak valid</string>
    <string name="unauthorized">Email tidak terdaftar! / Email atau Password salah!</string>
    <string name="email_exist">Email sudah terdaftar!</string>
    <string name="pref_is_login">is_login</string>
    <string name="pref_email">email</string>
    <string name="pref_password">password</string>
    <string name="pref_name">name</string>
    <string name="pref_username">username</string>
    <string name="pref_token">token</string>
    <string name="pref_user_id">user id</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="scannow">Scan Rambu</string>
    <string name="gallery">Ambil Dari Gallery</string>
    <string name="camera">Ambil Dari Camera</string>
    <string name="no_permission">Tidak mendapat izin akses.</string>
    <string name="btn_capture_image">Capture image</string>
    <string name="btn_switch_camera">Switch camera</string>
    <string name="failed_to_open_camera">Gagal membuka kamera</string>
    <string name="failed_to_save_image">Gagal menyimpan gambar</string>
    <string name="name_profile">Name \t\t\t\t\t\t:</string>
    <string name="username_profile">Username \t:</string>
    <string name="email_profile">Email \t\t\t\t\t\t\t:</string>
    <string name="change_password">Ubah Password</string>
    <string name="change_password_success">Password berhasil diubah</string>
    <string name="change_password_failed">Password gagal diubah</string>
    <string name="change_password_error">Password lama salah</string>
    <string name="login_success">Login berhasil</string>
    <string name="login_failed">Login gagal</string>
    <string name="register_success">Register berhasil</string>
    <string name="judul_label">Hasil Deteksi</string>
    <string name="hasil_label">Hasil Label</string>
    <string name="judul_confidence">Confidence</string>
    <string name="hasil_confidence">Hasil Confidence</string>
    <string name="judul_penjelasan">Penjelasan</string>
    <string name="hasil_penjelasan">Hasil Penjelasan</string>
    <string name="scan_lagi">Scan Lagi</string>

    <string name="dilarang_berhenti">Sign ini berfungsi untuk mengatur pengendara bahwa tidak diperbolehkan berhenti dan parkir di area ini.</string>
    <string name="isyarat_lalin">Sign ini berfungsi untuk mengatur pejalan kaki agar berhati-hati saat melintas di area penyeberang jalan.</string>
    <string name="larangan_belokkanan">Sign ini berfungsi untuk mengatur pengendara bahwa tidak diperbolehkan belok kanan.</string>
    <string name="larangan_belokkiri">Sign ini berfungsi untuk mengatur pengendara bahwa tidak diperbolehkan belok kiri.</string>
    <string name="larangan_memutar">Sign ini berfungsi untuk mengatur pengendara bahwa tidak diperbolehkan memutar.</string>
    <string name="dilarang_parkir">Sign ini berfungsi untuk mengatur pengendara bahwa tidak diperbolehkan parkir di area ini.</string>
    <string name="area_parkir">Sign ini memberikan penjelasan bahwa daerah ini merupakan area parkir kendaraan.</string>
    <string name="penegasan_rambu_tambahan">Sign ini memberikan peringatan kepada para pengendara dan pengguna jalan untuk lebih berhati-hati ketika ingin memasuki suatu jalur.</string>

    <string name="label_1">Dilarang Berhenti</string>
    <string name="label_2">Dilarang Parkir</string>
    <string name="label_3">Dilarang Belok Kanan</string>
    <string name="label_4">Dilarang Belok Kiri</string>
    <string name="label_5">Dilarang Memutar</string>
    <string name="label_6">Penegasan Rambu Tambahan</string>
    <string name="label_7">Isyarat Lalu lintas</string>
    <string name="label_8">Area Parkir</string>
</resources>